--- a/test/bdd/fixtures/agent-rest/.env
+++ b/test/bdd/fixtures/agent-rest/.env
@@ -28,6 +28,13 @@ DEFAULT_KEY_TYPE=ED25519
 DEFAULT_KEY_AGREEMENT_TYPE=X25519ECDHKW
 
 # Holder agent configurations
+THIRD_HOST=0.0.0.0
+THIRD_INBOUND_PORT=7081
+THIRD_API_PORT=7082
+THIRD_DEBUG_PORT=3000
+
+
+# Holder agent configurations
 HOLDER_HOST=0.0.0.0
 HOLDER_INBOUND_PORT=8081
 HOLDER_API_PORT=8082
@@ -39,6 +46,10 @@ ISSUER_INBOUND_PORT=9081
 ISSUER_API_PORT=9082
 ISSUER_DEBUG_PORT=5000
 
+# Holder webhook configurations
+THIRD_WEBHOOK_CONTAINER_NAME=third
+THIRD_WEBHOOK_HOST=0.0.0.0
+THIRD_WEBHOOK_PORT=7083
 
 
 # Holder webhook configurations
