--- a/deploy/agent-rest/.env
+++ b/deploy/agent-rest/.env
@@ -27,6 +27,15 @@ DEFAULT_MEDIA_TYPE_PROFILES=didcomm/v2,didcomm/aip2;env=rfc19,didcomm/aip2;env=r
 DEFAULT_KEY_TYPE=ED25519
 DEFAULT_KEY_AGREEMENT_TYPE=X25519ECDHKW
 
+
+
+# Third agent configurations
+THIRD_HOST=0.0.0.0
+THIRD_INBOUND_PORT=7081
+THIRD_API_PORT=7082
+THIRD_DEBUG_PORT=3000
+
+
 # Holder agent configurations
 HOLDER_HOST=0.0.0.0
 HOLDER_INBOUND_PORT=8081
@@ -40,6 +49,10 @@ ISSUER_API_PORT=9082
 ISSUER_DEBUG_PORT=5000
 
 
+# Third webhook configurations
+THIRD_WEBHOOK_CONTAINER_NAME=third
+THIRD_WEBHOOK_HOST=0.0.0.0
+THIRD_WEBHOOK_PORT=7083
 
 # Holder webhook configurations
 HOLDER_WEBHOOK_CONTAINER_NAME=holder
