--- a/test/bdd/fixtures/agent-rest/docker-compose.yml
+++ b/test/bdd/fixtures/agent-rest/docker-compose.yml
@@ -3,6 +3,42 @@ version: '3.9'
 
 services:
 
+
+  third:
+      container_name: third
+      image: ${AGENT_REST_IMAGE}:${AGENT_REST_IMAGE_TAG}
+      environment:
+        - ARIESD_API_HOST=${THIRD_HOST}:${THIRD_API_PORT}
+        - ARIESD_INBOUND_HOST=${HTTP_SCHEME}@${THIRD_HOST}:${THIRD_INBOUND_PORT}
+        - ARIESD_INBOUND_HOST_EXTERNAL=${HTTP_SCHEME}@https://third:${THIRD_INBOUND_PORT}
+        - ARIESD_WEBHOOK_URL=http://${THIRD_WEBHOOK_CONTAINER_NAME}:${THIRD_WEBHOOK_PORT}
+        - ARIESD_DEFAULT_LABEL=third-agent
+        - ARIESD_DATABASE_TYPE=leveldb
+        - ARIESD_DATABASE_PREFIX=third
+        - ARIESD_DATABASE_TIMEOUT=60
+        - ARIESD_HTTP_RESOLVER=${HTTP_DID_RESOLVER}
+        - ARIESD_CONTEXT_PROVIDER_URL=${CONTEXT_PROVIDER_URL}
+        - ARIESD_MEDIA_TYPE_PROFILES=${DEFAULT_MEDIA_TYPE_PROFILES}
+        - ARIESD_KEY_TYPE=${DEFAULT_KEY_TYPE}
+        - ARIESD_KEY_AGREEMENT_TYPE=${DEFAULT_KEY_AGREEMENT_TYPE}
+        - TLS_CERT_FILE=/etc/tls/ec-pubCert.pem
+        - TLS_KEY_FILE=/etc/tls/ec-key.pem
+
+      ports:
+        - ${THIRD_INBOUND_PORT}:${THIRD_INBOUND_PORT}
+        - ${THIRD_API_PORT}:${THIRD_API_PORT}
+      entrypoint: ""
+      command:  /bin/sh -c "cp /etc/tls/* /usr/local/share/ca-certificates/;update-ca-certificates; aries-agent-rest start" GRPC SERVER
+      networks:
+        - test
+      depends_on:
+        - file-server.example.com
+      extra_hosts:
+        - host.docker.internal:host-gateway
+      volumes:
+        - ../keys/tls:/etc/tls
+
+    
   holder:
     container_name: holder
     image: ${AGENT_REST_IMAGE}:${AGENT_REST_IMAGE_TAG}
