--- a/PEP-Proxy/.env
+++ b/PEP-Proxy/.env
@@ -10,7 +10,7 @@ PEP_AUTHTOKEN_TYPE=jwt
 #NODE verifier protocol. Admitted values: "http","https"
 NODE_VERIFIER_PROTOCOL=https
 #NODE verifier host.
-NODE_VERIFIER_HOST=172.16.10.118
+NODE_VERIFIER_HOST=<YOUR_IP>
 NODE_VERIFIER_PORT=7082
 #NODE API: Specify target API type: Admitted values: "GenericAPI"
 NODE_VERIFIER_API=GenericAPI
@@ -24,7 +24,7 @@ NODE_JWT_ALGORITHMS=ES256K
 #Target protocol. Admitted values: "http","https"
 PEP_TARGET_PROTOCOL=https
 #Target host.
-PEP_TARGET_HOST=172.16.10.118
+PEP_TARGET_HOST=<YOUR_IP>
 PEP_TARGET_PORT=7082
 #PEP_TARGET_API: Specify target API type: Admitted values: "NGSIv1","NGSIv2","NGSILDv1","GenericAPI"
 PEP_TARGET_API=GenericAPI
@@ -32,7 +32,7 @@ PEP_TARGET_API=GenericAPI
 #Target2 protocol. Admitted values: "http","https"
 #PEP_TARGET2_PROTOCOL=http
 #Target2 host.
-#PEP_TARGET2_HOST=172.16.10.118
+#PEP_TARGET2_HOST=<YOUR_IP>
 #PEP_TARGET2_PORT=7082
 #PEP_TARGET2_API: Specify target API type: Admitted values: "NGSIv1","NGSIv2","NGSILDv1","GenericAPI"
 #PEP_TARGET2_API=GenericAPI
@@ -50,7 +50,7 @@ PEP_BLOCKCHAIN_API=NativeAPI
 #PEP_BLOCKCHAIN_PROTOCOL: Admitted values: "http","https"
 PEP_BLOCKCHAIN_PROTOCOL=http
 #PEP_BLOCKCHAIN_HOST: specify BlockChain Public IP address
-PEP_BLOCKCHAIN_HOST=172.16.10.118
+PEP_BLOCKCHAIN_HOST=<YOUR_IP>
 #PEP_BLOCKCHAIN_PORT: specify BlockChain port
 PEP_BLOCKCHAIN_PORT=8000
         
@@ -61,7 +61,7 @@ PEP_BLOCKCHAIN_GET_TOKEN=/token # Optional : Default value : /token
 # PEP_ENDPOINT: PEP-Proxy endpoint: protocol+ip+port
 # HOST NO admitted: 0.0.0.0, localhost, 127.0.0.1
 #PEP_ENDPOINT=<specify PEP-Proxy Public address ex: https://<PEP-IP>:<PEP-PORT>>
-PEP_ENDPOINT=https://172.16.10.118:1027
+PEP_ENDPOINT=https://<YOUR_IP>:1027
 
 # PEP_CORS_ENABLED:
 # 1 --> if you need to add CORS headers and the component hidden by the PEP-Proxy are not ready to support CORS headers.
