Update XADATU integration for review demo

--- a/PEP-Proxy-Demo/.env
+++ b/PEP-Proxy-Demo/.env
@@ -10,8 +10,8 @@ PEP_AUTHTOKEN_TYPE=jwt
 #NODE verifier protocol. Admitted values: "http","https"
 NODE_VERIFIER_PROTOCOL=https
 #NODE verifier host.
-NODE_VERIFIER_HOST=<YOUR_IP>
-NODE_VERIFIER_PORT=9082
+PRODUCER_NODE_HOST=<YOUR_IP>
+PRODUCER_NODE_PORT=9082
 #NODE API: Specify target API type: Admitted values: "GenericAPI"
 NODE_VERIFIER_API=GenericAPI
 NODE_VERIFIER_POST_VERIFYCREDENTIAL=/fluidos/idm/verifyCredential
@@ -25,7 +25,7 @@ NODE_JWT_ALGORITHMS=ES256K
 PEP_TARGET_PROTOCOL=http
 #Target host.
 PEP_TARGET_HOST=<YOUR_IP>
-PEP_TARGET_PORT=7082
+PEP_TARGET_PORT=9083
 #PEP_TARGET_API: Specify target API type: Admitted values: "NGSIv1","NGSIv2","NGSILDv1","GenericAPI"
 PEP_TARGET_API=GenericAPI
 
