--- a/.github/workflows/sonarqube.yml
+++ b/.github/workflows/sonarqube.yml
@@ -28,11 +28,25 @@ jobs:
           sudo cp sonarqube.crt /usr/local/share/ca-certificates/sonarqube.crt
           sudo update-ca-certificates
 
-      - name: SonarQube Analysis
-        uses: SonarSource/sonarqube-scan-action@v2
-        env:
-          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-          SONAR_HOST_URL: https://sonarqube.k8s-ants.inf.um.es
+      #- name: SonarQube Analysis
+      #  uses: SonarSource/sonarqube-scan-action@v2
+      #  env:
+      #    SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+      #    SONAR_HOST_URL: https://sonarqube.k8s-ants.inf.um.es
+
+      - name: Download SonarScanner CLI
+        run: |
+          curl -Lo sonar-scanner.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
+          unzip sonar-scanner.zip -d $HOME
+          mv $HOME/sonar-scanner-* $HOME/sonar-scanner
+      
+      - name: Run SonarScanner
+        run: |
+          $HOME/sonar-scanner/bin/sonar-scanner \
+            -Dsonar.projectKey=idm-fluidos-aries-framework-go \
+            -Dsonar.sources=. \
+            -Dsonar.host.url=https://sonarqube.k8s-ants.inf.um.es \
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
 
       #- name: Show SonarQube Dashboard URL
       #  run: echo "See results: https://sonarqube.k8s-ants.inf.um.es/dashboard?id=idm-fluidos-aries-framework-go"
